--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
 
 /* global */
 .container{
-    margin:auto;
+    margin:10px auto;
     width:80%;
     overflow:hidden;
 }
@@ -48,20 +48,49 @@ body{
     margin:0;
 }
 
+/* header section*/
 header{
     background-color:var(--light-blue);
     color:var(--dark-gray);
-    padding-top:30px;
-    min-height:70px;
+    padding-top:10px;
+    min-height: 100px;
     border-bottom: 5px solid var(--blue);
 }
+header .container{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+    align-items:center;
+    align-content:center;
+    
+}
 
-/* header section*/
+header #logo h1{
+    margin:0;
+    padding:0;
+}
+
+header #logo{
+    display:inline-block;
+    text-align:center;
+    padding: 20px;
+    width:150px;
+    border: 5px solid var(--ear-pink);
+    border-radius:20px;
+    background-color:var(--ear-pink-light);
+    margin-right:20px;
+    color:#615854;
+    font-size:16px;
+    justify-self:center;
+}
+
 header ul{
+    text-align:center;
     margin:0;
     padding:0;
 }
 header li{
+    text-align:center;
     float:left;
     display:inline;
     padding: 0 10px;
@@ -74,33 +103,6 @@ header a{
     padding:100% 10px;
 }
 
-nav{
-    display:inline;
-    float:right;
-    padding:10px 20px;
-    margin-top:20px;
-    background: var(--carrot-green);
-    border: 5px solid var(--carrot-green-dark);
-    border-radius:20px;
-}
-
-header #logo h1{
-    margin:0;
-    padding:0;
-}
-
-header #logo {
-    text-align:center;
-    float:left;
-    padding: 20px;
-    margin:10px 0px;
-    border: 5px solid var(--ear-pink);
-    border-radius:20px;
-    background-color:var(--ear-pink-light);
-    color:#615854;
-    font-size:16px;
-}
-
 header .current a{
     color:var(--carrot-orange);
     font-weight:bold;
@@ -110,17 +112,35 @@ header .current a{
 
 }
 
-/* information section */
+nav{
+    display:inline-block;
+    padding:10px 20px;
+    margin-top:20px;
+    min-width:200px;
+    background: var(--carrot-green);
+    border: 5px solid var(--carrot-green-dark);
+    border-radius:20px;
+    justify-self:center;
+}
+
+
+/* ================ Home page ====================*/
 #about #info p, h2{
     padding:0;
     margin:0;
     font-size:20px;
 }
+
+#about .container{
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
+}
 #about #info{
     float:left;
     width:70%;
     box-sizing:border-box;
-    margin-top:20px;
+    margin-top:20px 0 0 0;
     border: 5px solid var(--dark-gray);
     border-radius:10px;
     padding:20px;
@@ -165,14 +185,22 @@ footer{
 
 /* ============= Education page ============== */
 
+
+#schools .strip{
+    margin-top:20px;
+    display:flex;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+}
+
 #schools .strip .picture-box img{
     margin:0;
     padding:0;
     width:150px;
 }
-#schools  .strip .picture-box{
+#schools .strip .picture-box{
     float:left;
-    width:40%;
     box-sizing:border-box;
 }
 
@@ -190,16 +218,13 @@ footer{
     margin:0;
 }
 
-#schools  .strip .textbox{
-    float:right;
-    width:60%;
+#schools .strip .textbox{
+    width:70%;
+    padding:20px;
+    margin-top:20px;
     box-sizing:border-box;
 }
 
-#schools  .strip{
-    overflow:hidden;
-    margin-top:20px;
-}
 /* ============= Skills page ============= */
 
 #skills #skill-boxes{
@@ -210,10 +235,16 @@ footer{
 #skill-boxes .box .textbox ul{
     text-align: center;
     list-style: none;
+    width:100%;
 }
-
+#skill-boxes .box .textbox #topic{
+    width:100%;
+}
+#skill-boxes .box .textbox{
+    width:100%;
+}
 #skill-boxes .box .picture-box img{
-    max-width:150px;
+    width:70%;
     margin:auto;
 }
 #skill-boxes .box .picture-box{
@@ -222,6 +253,7 @@ footer{
 #skill-boxes .box{
     padding:10px;
     flex-basis:30%;
+    margin:10px 0;
     align-items:center;
     border:1px solid var(--dark-gray);
 
@@ -259,4 +291,16 @@ footer{
     margin-top:10px;
 }
 
+@media(max-width: 1024px) {
+    header .container,
+    #about .container
+    {
+       flex:direction;
+       justify-content:center;
+    }
+    #about
+}
 
+@media(max-width: 480px){
+
+}
