--- a/style.css
+++ b/style.css
@@ -84,16 +84,29 @@ header #logo{
     justify-self:center;
 }
 
+nav{
+    display:inline-block;
+    padding:10px 0px;
+    margin-top:20px;
+    min-width:200px;
+    background: var(--carrot-green);
+    border: 5px solid var(--carrot-green-dark);
+    border-radius:20px;
+    justify-self:center;
+}
+
 header ul{
-    text-align:center;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:center;
     margin:0;
     padding:0;
 }
 header li{
     text-align:center;
-    float:left;
-    display:inline;
     padding: 0 10px;
+    margin:0;
+    list-style:none;
 }
 
 header a{
@@ -112,16 +125,7 @@ header .current a{
 
 }
 
-nav{
-    display:inline-block;
-    padding:10px 20px;
-    margin-top:20px;
-    min-width:200px;
-    background: var(--carrot-green);
-    border: 5px solid var(--carrot-green-dark);
-    border-radius:20px;
-    justify-self:center;
-}
+
 
 
 /* ================ Home page ====================*/
@@ -153,6 +157,7 @@ nav{
     background-color:#99EDC3;
     color: #008080;
     width:30%;
+    min-width:150px;
     padding:5px;
     margin:auto;
     margin-top:10px;
