--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ header a{
     text-decoration:none;
     color:var(--off-white);
     font-size:20px;
-    padding:100% 10px;
+    padding:10px;
 }
 
 header .current a{
@@ -302,6 +302,7 @@ footer{
     {
        flex:direction;
        justify-content:center;
+       margin:0;
     }
     #about
 }
