--- a/style.css
+++ b/style.css
@@ -183,7 +183,11 @@ footer{
     text-align:center;
     background-color:var(--blue);
     color:var(--off-white);
-    margin-bottom:0;    
+    padding-bottom:10px;   
+}
+
+footer a{
+    color:var(--off-white);
 }
 
 /* ============= Education page ============== */
